<resources>
    <string name="app_name">Transfile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="server_started">Server Started</string>
    <string name="server_stopped">Server Stopped</string>
    <string name="start">Start Server</string>
    <string name="stop">Stop</string>
    <string name="app_desc">Transfile</string>
    <string name="app_title">Transfile</string>
    <string name="app_info"><b>Transfile</b></string>
    <string name="start_caption">Start Server</string>
    <string name="stop_caption">Stop Server</string>
    <string name="service_started">Service Started</string>
    <string name="notification_started_title">Android web server</string>
    <string name="notification_started_text">Android web server started.</string>
    <string name="message_title">Transfile message</string>
    <string name="menu_preference">Settings</string>
    <string name="preference_title">Android web server settings</string>
    <string name="pref_serverport_title">Server Port</string>
    <string name="pref_serverport_section_title">Server Port</string>
    <string name="pref_serverport_message">Enter server port.\n</string>
    <string name="pref_serverport_summary">Enter server port</string>
    <string name="log_running">Transfile is running..</string>
    <string name="log_notrunning">TransFile is stopped</string>
    <string name="log_msg1">Connect to transfer, enter: </string>
    <string name="log_msg2">in a browser.</string>
    <string name="cancel">CANCEL</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="enter_port_text">Enter port to be used (1000 - 9999):</string>
    <string name="requesting_message">Requesting to connect.</string>
    <string name="set">SET</string>
</resources>
